--- a/index.html
+++ b/index.html
@@ -6,8 +6,70 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <div id="div1" style="background; display: flex; flex-direction: column;" >
+      <nav id="nav1">
+        <img src="images/spotify-logo.png" height="50em" alt="">
+        <ul id="nav1Ul">
+          <li>Premium</li>
+          <li>Discover</li>
+          <li>Help</li>
+          <li>Download</li>
+        </ul>
+      </nav>
+      <img src="images/landing.jpg"  height="90%"   alt="">
+    </div>
+
+    <div id="div2">
+      <h2> What’s on Spotify?</h2>
+      <div id="div2Div">
+        <div>
+          <img src="images/music-icon.png" height="100em" alt="">
+          <h2 class="textGreen">Millions of Songs</h2>
+          <p>There are millions of songs on Spotify</p>
+        </div>
+        <div>
+          <img src="images/high-quality-icon.png" height="100em" alt="">
+          <h2 class="textGreen">HD Music</h2>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+        <div>
+          <img src="images/devices-icon.png"  height="100em" alt="">
+          <h2 class="textGreen">Stream Everywhere</h2>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="div3">
+      <div id="div3Div">
+        <div>
+          <h2>It’s as yeezy as Kanye West.</h2>
+          <div>
+            <h3>Search</h3>
+            <p>Know what you want to listen to? Just search and hit play.</p>
+          </div>
+          <div>
+            <h3>Browse</h3>
+            <p>Check out the
+              latest charts, brand new releases and great playlists for right now.</p>
+          </div>
+          <div>
+            <h3>Discover</h3>
+            <p>Enjoy new music every Monday with your
+              own personal playlist.</p>
+          </div>
+        </div>
+        <div><img src="images/spotify-app.jpg"  height="400em" alt=""></div>
+      </div>
+      <div id="div3Logo"> <img src="images/spotify-icon-white.png" height="100em" alt=""></div>
+    </div>
+
+
+
+
     Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
     right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
     Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
