--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
     <div id="div3">
       <div id="div3Div">
-        <div>
+        <div id="div3DivSubDiv1">
           <h2>It’s as yeezy as Kanye West.</h2>
           <div>
             <h3>Search</h3>
-            <p>Know what you want to listen to? Just search and hit play.</p>
+            <p class="pText">Know what you want to listen to? Just search and hit play.</p>
           </div>
           <div>
             <h3>Browse</h3>
@@ -62,7 +62,7 @@
               own personal playlist.</p>
           </div>
         </div>
-        <div><img src="images/spotify-app.jpg"  height="400em" alt=""></div>
+        <div id="div3SpotifyApp"><img src="images/spotify-app.jpg"  height="400em" alt=""></div>
       </div>
       <div id="div3Logo"> <img src="images/spotify-icon-white.png" height="100em" alt=""></div>
     </div>
