--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
   </head>
   <body>
-    <div id="div1" style="background; display: flex; flex-direction: column;" >
+    <div id="div1" >
       <nav id="nav1">
         <img src="images/spotify-logo.png" height="50em" alt="">
         <ul id="nav1Ul">
@@ -19,7 +23,12 @@
           <li>Download</li>
         </ul>
       </nav>
-      <img src="images/landing.jpg"  height="90%"   alt="">
+      <div id="div1SubDiv1" class="textWhite">
+        <h1>Music for everyone</h1>
+       <p>Spotify is now free on mobile, tablet and computer. Listen to the
+        right music, wherever you are.</p>
+      </div>
+      
     </div>
 
     <div id="div2">
@@ -46,7 +55,7 @@
     <div id="div3">
       <div id="div3Div">
         <div id="div3DivSubDiv1">
-          <h2>It’s as yeezy as Kanye West.</h2>
+          <h2> <span class="h2Span"> It’s as yeezy as Kanye West.</span></h2>
           <div>
             <h3>Search</h3>
             <p class="pText">Know what you want to listen to? Just search and hit play.</p>
@@ -66,15 +75,5 @@
       </div>
       <div id="div3Logo"> <img src="images/spotify-icon-white.png" height="100em" alt=""></div>
     </div>
-
-
-
-
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
   </body>
 </html>
